test/src/e2e_vm_tests/test_programs/Should_succeed/test_abis/balance_test_abi/src/main.sw
library balance_test_abi;

abi BalanceTest {
    fn get_42() -> u64;
}
